src/parser/snapshots/hulk_compiler__parser__program__tests__parser_snapshot_program_basic.snap
---
source: src/parser/program.rs
expression: ast
---
node:
  delcs: []
  body:
    node:
      Literal:
        node:
          Number: 42
        span:
          start: 9
          end: 11
    span:
      start: 9
      end: 11
span:
  start: 9
  end: 21
